Add comprehensive sound effects for timer start/stop with test buttons

--- a/index.html
+++ b/index.html
@@ -288,6 +288,23 @@
                                 啟用環境音
                             </label>
                         </div>
+                        <div class="setting-item">
+                            <label>音效測試</label>
+                            <div class="sound-test-buttons">
+                                <button id="testStartSound" class="btn-secondary">
+                                    <i class="fas fa-play"></i>
+                                    測試開始音效
+                                </button>
+                                <button id="testWorkComplete" class="btn-secondary">
+                                    <i class="fas fa-check"></i>
+                                    測試工作完成音效
+                                </button>
+                                <button id="testBreakComplete" class="btn-secondary">
+                                    <i class="fas fa-coffee"></i>
+                                    測試休息完成音效
+                                </button>
+                            </div>
+                        </div>
                     </div>
                     <div class="setting-group">
                         <h3>AI設置</h3>
