--- a/index.html
+++ b/index.html
@@ -76,9 +76,34 @@
                     </div>
 
                     <div class="session-settings">
-                        <label for="sessionCount">Session 數量：</label>
-                        <input type="number" id="sessionCount" min="1" max="20" value="4" class="session-input">
-                        <span class="session-info">個 Session</span>
+                        <h3>Session 設置</h3>
+                        <div class="session-controls">
+                            <button id="decreaseSession" class="session-btn" disabled>
+                                <i class="fas fa-minus"></i>
+                            </button>
+                            <input type="number" id="sessionCount" min="1" max="20" value="4" class="session-input">
+                            <button id="increaseSession" class="session-btn">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                        <p class="session-info">個 Session</p>
+                        <div class="session-progress">
+                            <div id="sessionProgressBar" class="session-progress-bar"></div>
+                        </div>
+                        <div class="session-stats">
+                            <div class="session-stat">
+                                <div class="session-stat-value" id="currentSession">1</div>
+                                <div class="session-stat-label">當前</div>
+                            </div>
+                            <div class="session-stat">
+                                <div class="session-stat-value" id="totalSessions">4</div>
+                                <div class="session-stat-label">總數</div>
+                            </div>
+                            <div class="session-stat">
+                                <div class="session-stat-value" id="remainingSessions">3</div>
+                                <div class="session-stat-label">剩餘</div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="timer-display">
